Updating proto for UR

--- a/app/views/ftf/claim/index.html
+++ b/app/views/ftf/claim/index.html
@@ -15,27 +15,63 @@
       Claim
     </h1>
 
-    <h2 class="govuk-heading-l">Prototypes</h2>
+    <h2 class="govuk-heading-l">FTF Claim Prototypes</h2>
 
     <p class="govuk-body-l">Scenario: Start your first claim</p><br>
+        
     
-    <p class="govuk-body"><strong>FTF Claim v2.1: Proof of evidence</strong></p>
-    <p class="govuk-body"><a href="/ftf/claim/v2-1/index">Click to open protoype</a></p>
+    
+    <h3 class="govuk-heading-m">1. Claim journey</h3>
+
+    <p class="govuk-body"><a href="/ftf/claim/v2-0/index" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
 
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>FTF Claim v2.2: Types of evidence</strong></p>
-    <p class="govuk-body"><a href="/ftf/claim/v2-2/upload2">Click to open prototype</a></p>
-    
-    <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>FTF Claim v2.3: Pages of evidence (proof)</strong></p>
-    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2">Click to open prototype</a></p>
+
+
+
+    <h3 class="govuk-heading-m">2. Evidence categories</h3>
+
+    <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-6/upload2" target="_blank">V2.6: Full page: Proof + (opens in a new tab)</a></p>
+
 
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>FTF Claim v2.4: Pages of evidence (types)</strong></p>
-    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2">Click to open prototype</a></p>
+
+
+
+    <h3 class="govuk-heading-m">3. Upload task</h3>
+
+    <p class="govuk-body-m"><strong>Type of evidence</strong></p>
+
+    <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2" target="_blank">V2.0: Full page (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-2/upload2" target="_blank">V2.2: Accordion (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-4/upload2" target="_blank">V2.4: Links (opens in a new tab)</a></p> 
+
+<!--<p    <p class="govuk-body"><strong> v2.2: Links (type)</strong></p> -->
+<!--<p class="govuk-body"><a href="/ftf/claim/v2-2/upload2" target="_blank">Click to open prototype (opens in a new tab)</a></p> -->
+
+<br>
+
+    <p class="govuk-body-m"><strong>Proof of evidence</strong></p>
+
+    <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2" target="_blank">V2.3: Accordion: Proof (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-5/upload2" target="_blank">V2.5: Links: Proof (opens in a new tab)</a></p> 
+
+
+    <hr style="margin: 40px 0;">
+
+    <h3 class="govuk-heading-m">4. Review claim form</h3>
+
+    <p class="govuk-body"><a href="/public/downloads/ftf/FTF-Claim-Form.pdf" target="_blank">FTF Claim form (opens in a new tab)</a></p> 
+
 
   </div>
 </div>
+
+<br><br>
+
 
 </main>
 
