--- a/app/views/ftf/claim/v2-0/download.html
+++ b/app/views/ftf/claim/v2-0/download.html
@@ -4,7 +4,6 @@
 
 {% block content %}
 
-
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
@@ -83,7 +82,7 @@
 <br>
 
 
-      <a href="activity1?04-01=complete">
+      <a href="activity1b">
         <button class="govuk-button">
           Continue
         </button>
@@ -93,6 +92,7 @@
 
 
     {% include "../../_includes/details-block_claim-questions-contact.html" %}
+
 
 
 </main>
