--- a/app/views/ftf/claim/v2-2/confirmation.html
+++ b/app/views/ftf/claim/v2-2/confirmation.html
@@ -28,7 +28,29 @@
             Your reference number<br><strong>HDJ2123F</strong>
           </div>
         </div>
-        <p class="govuk-body">We have sent you a confirmation email.</p>
+        
+        
+        
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+          <p class="govuk-body" style="margin: 0;">We have sent you a confirmation email.</p>
+        
+          <a href="javascript:void(0);" onclick="window.print();" style="text-decoration: none;">
+            <div style="width: 141px; height: 40px; position: relative;">
+              <div style="width: 141px; height: 40px; left: 0px; top: 0px; position: absolute; background: white; border: 1px #BCBDBF solid;"></div>
+              <div style="width: 141px; right: 0; top: 8px; position: absolute; text-align: center; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 25px; word-wrap: break-word;">Print this page</div>
+            </div>
+          </a>
+          
+        </div>
+        
+        <br><br>
+        
+        
+        
+        
+        
+        
+        
         <h2 class="govuk-heading-m">What happens next</h2>
         <p class="govuk-body">
           We will assess your claim and let you know if we need any further information.<br><br>
@@ -36,24 +58,17 @@
           You will get a notification when your claim is approved and paid.<br>
         </p>
 
+        <br>
 
-        <h2 class="govuk-heading-m">Questions about your claim</h2>
-        <p class="govuk-body">If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
-        <p class="govuk-body"><strong>Telephone</strong><br>
-         Telephone: 03000 200 301<br> 
-         Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-       <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a><br><br>
-        
-       <strong>Email</strong><br>
-       <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
+        {% include "../../_includes/details-block_claim-questions-contact.html" %}
+
+       <br>
 
 
-       <br><br>
 
        <p class="govuk-body">
-       <a href="/_common/not-testing.html">Print this page</a><br><br>
-       <a href="activity4.html">Go back to the grant task list</a></p>
-      </p>
+        <a href="activity4.html">Go back to the grant task list</a></p>
+       </p>
 
        
  
