--- a/app/views/ftf/claim/v2-3/check.html
+++ b/app/views/ftf/claim/v2-3/check.html
@@ -25,7 +25,7 @@
 
 
     <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
-    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your claim</h1>
+    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your claim files</h1>
     <span class="govuk-body">Review your files before submitting your claim.</span>
 
 <br><br><br>
@@ -54,11 +54,7 @@
 
 
 
-
-
         <h2 class="govuk-heading-l">2. Evidence</h2>
-
-
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -71,7 +67,7 @@
               Reservoir clips - invoice.pdf , 3MB 
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="upload4.html#evidence">
+              <a class="govuk-link" href="upload4.html#purchased-evidence-section">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -81,13 +77,13 @@
               Proof items have been paid for
             </dt>
             <dd class="govuk-summary-list__value">
-              Reservoir pipe - receipt.pdf , 1MB<br>
-              Reservoir pump - receipt.pdf , 1MB<br>
-              Reservoir seal - receipt.pdf , 1MB<br>
-              Reservoir clips - receipt.pdf , 1MB
+              Reservoir pipe - receipt.pdf , 2MB<br>
+              Reservoir pump - receipt.pdf , 2MB<br>
+              Reservoir seal - bank statement.pdf , 2MB<br>
+              Reservoir clips - bank statement.pdf , 2MB
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="upload4">
+              <a class="govuk-link" href="upload4.html#paid-evidence-section">
                 Change<span class="govuk-visually-hidden"> date of birth</span>
               </a>
             </dd>
@@ -100,7 +96,7 @@
               (No files added)
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="upload4">
+              <a class="govuk-link" href="upload4.html#place-evidence-section">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -114,11 +110,10 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
-                  <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="upload4">
+                  <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="upload4.html#met-evidence-section">
                     Change<span class="govuk-visually-hidden"> contact details</span>
                   </a></li>
               </ul>
-
             </dd>
           </div>
         </dl>
@@ -130,6 +125,16 @@
           Continue
         </button>
       </a>
+
+
+
+
+
+
+
+
+
+
 
 
 
