--- a/app/views/ftf/claim/v2-3/download.html
+++ b/app/views/ftf/claim/v2-3/download.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
@@ -78,9 +79,11 @@
     
         <p><a class="govuk-link" href="/_common/not-testing.html" target="_blank">Check guidance on how to make a claim (opens in a new tab)</a></p>
 
+
 <br>
 
-      <a href="activity1b">
+
+      <a href="activity1?04-01=complete">
         <button class="govuk-button">
           Continue
         </button>
@@ -90,7 +93,6 @@
 
 
     {% include "../../_includes/details-block_claim-questions-contact.html" %}
-
 
 
 </main>
