--- a/app/views/ftf/claim/v2-0/activity1.html
+++ b/app/views/ftf/claim/v2-0/activity1.html
@@ -25,6 +25,8 @@
 
 
 
+
+
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper" style="padding-top: 0px; padding-bottom: 0px;">
     <div class="govuk-grid-row" style="padding-top:16px;">
@@ -55,14 +57,13 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">First claim under review</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">First grant claim window is open</h2>
 
       <div class="govuk-inset-text">
-        The RPA aims to process claims within <strong>30 working days</strong>.
+        Submit your claim by 11:59pm on<strong> 31 July 2024</strong>.
       </div>
 
 
-      
       <ol class="govuk-prototype-kit-task-list">
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
@@ -146,7 +147,7 @@
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Read and sign agreement
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
@@ -165,35 +166,36 @@
             <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
+            {% if (data['04-01'] == "ready") %}
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
+                <a href="download.html" aria-describedby="eligibility-status">
                   Download claim form
                 </a>
               </span>
-              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
+            {% elif (data['04-01'] == "complete") %}
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
+                <a href="download.html" aria-describedby="eligibility-status">
+                  Download claim form
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
+            </li>
+            {% endif %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
                   Upload claim form and evidence
-                </a>
               </span>
-              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
                   Submit claim
-                </a>
               </span>
-              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
-            </li>
-            <li class="govuk-prototype-kit-task-list__item">
-              <span class="govuk-prototype-kit-task-list__task-name">
-                  Your claim outcome
-              </span>
-              <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="contact-details-status">In progress</strong>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
             </li>
           </ul>
         </li>
