--- a/app/views/ftf/claim/v2-0/activity1b.html
+++ b/app/views/ftf/claim/v2-0/activity1b.html
@@ -146,7 +146,7 @@
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Read and sign agreement
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
@@ -243,16 +243,15 @@
           </ul>
         </li>
 
-
-
-
-
-
-
-
       </ol>
     </div>
   </div>
+
+
+  <a href="email" aria-describedby="eligibility-status">
+    Move forward 
+  </a>
+
 
 
 </main>
