--- a/app/views/ftf/claim/v2-1/upload2.html
+++ b/app/views/ftf/claim/v2-1/upload2.html
@@ -91,219 +91,99 @@
       </strong>
     </div>
 
+    <br>
 
 
 
+<h3 class="govuk-heading-m" id="purchased-evidence-section">Proof items have been purchased</h3>
+<p class="govuk-body">For example, invoices</p>
 
 
-
-
-
-    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
-      <div class="govuk-accordion__section">
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
-              Proof items have been purchased
-            </span>
-          </h2>
-          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
-            For example, invoices
-          </div>
-        </div>
-        <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
-          
-          
-          <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
-            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-              
-
-            
-
-
-
-
-
-
-
-              <button id="navigateButton" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Choose file
-              </button>
-              <input type="file" id="fileInput" style="display: none;" onchange="handleFileSelection(this)">
-              <script>
-              function handleFileSelection(input) {
-                if (input.files.length > 0) {
-                  const selectedFile = input.files[0];
-                  window.location.href = 'upload3.html';
-                }
-              }
-              document.getElementById('navigateButton').addEventListener('click', function () {
-                document.getElementById('fileInput').click();
-              });
-              </script>
-
-
-
-
-
-
-
-
-
-            </div>
-          </div>
-
-
-
-        </div>
-      </div>
-      <div class="govuk-accordion__section">
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-2">
-              Proof items have been paid for
-            </span>
-          </h2>
-          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
-            For example, receipts and bank statements (you can cross out other transactions)
-          </div>
-        </div>
-        <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
-          
-          
-          <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
-            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-              
-     
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
-                Choose file
-              </button>
-     
-            
-            </div>
-          </div>
-
-
-
-
-        </div>
-      </div>
-      <div class="govuk-accordion__section">
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
-              Proof items are in place and operational
-            </span>
-          </h2>
-          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
-            For example, photos and videos
-          </div>
-        </div>
-        <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
-          
-          
-
-
-          <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
-            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-              
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
-                Choose file
-              </button>
-            
-            </div>
-          </div>
-
-
-
-
-
-        </div>
-      </div>
-      <div class="govuk-accordion__section">
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
-              Proof conditions and outputs have been met
-            </span>
-          </h2>
-          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
-            Only for projects with grant-specific conditions and outputs
-          </div>
-        </div>
-        <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-4">
-          
-          
-
-          <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
-            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-              
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
-                Choose file
-              </button>
-            
-            </div>
-          </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-      </div>
-    </div>
-
-
-    <br><br>
-
-
- 
-      <button class="govuk-button" data-module="govuk-button">
-        Continue
+<div style="width: 630px; height: 202px; position: relative">
+  <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+  <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+  <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+    
+  <a href="upload3.html#purchased-evidence-section">
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Choose file
       </button>
+  </a>
 
+</div>
+</div>
 
+<br><br><br><br>
 
+<div>
+  <h3 class="govuk-heading-m">Proof items have been paid for</h3>
+  <p class="govuk-body">For example, receipts and bank statements (you can cross out other transactions)</p>
+  
+  <div style="width: 630px; height: 202px; position: relative">
+    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+      
+    <a href="upload3.html#purchased-evidence-section">
+        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          Choose file
+        </button>
+    </a>
 
+</div>
+</div>
 
+<br><br><br><br>
 
+<div>
+  <h3 class="govuk-heading-m">Proof items are in place and operational</h3>
+  <p class="govuk-body">For example, photos and videos</p>
+  
+  <div style="width: 630px; height: 202px; position: relative">
+    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+      
+    <a href="upload3.html#purchased-evidence-section">
+        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          Choose file
+        </button>
+    </a>
 
+</div>
+</div>
 
+<br><br><br><br>
+
+<div>
+  <h3 class="govuk-heading-m">Proof conditions and outputs have been met</h3>
+  <p class="govuk-body">Only for projects with grant-specific conditions and outputs</p>
+  
+  <div style="width: 630px; height: 202px; position: relative">
+    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+      
+    <a href="upload3.html#purchased-evidence-section">
+        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          Choose file
+        </button>
+    </a>
+
+</div>
+</div>
+
+</div>
+
+<br><br><br><br>
+ 
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
 
 
 
