--- a/app/views/ftf/claim/v2-2/activity3.html
+++ b/app/views/ftf/claim/v2-2/activity3.html
@@ -148,7 +148,7 @@
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Read and sign agreement
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
