--- a/app/views/ftf/claim/v2-2/upload2.html
+++ b/app/views/ftf/claim/v2-2/upload2.html
@@ -119,44 +119,17 @@
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-              
-
-            
-
-
-
-
-
-
-
-              <button id="navigateButton" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Choose file
-              </button>
-              <input type="file" id="fileInput" style="display: none;" onchange="handleFileSelection(this)">
-              <script>
-              function handleFileSelection(input) {
-                if (input.files.length > 0) {
-                  const selectedFile = input.files[0];
-                  window.location.href = 'upload3.html';
-                }
-              }
-              document.getElementById('navigateButton').addEventListener('click', function () {
-                document.getElementById('fileInput').click();
-              });
-              </script>
+                         
+ 
+              <a href="upload3.html#financial-evidence-section">
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                  Choose file
+                </button>
+              </a>
 
 
-
-
-
-
-
-
-
-            </div>
+             </div>
           </div>
-
-
 
         </div>
       </div>
@@ -181,8 +154,7 @@
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
      
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
      
@@ -217,8 +189,7 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
             
@@ -252,34 +223,12 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
             
             </div>
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
