--- a/app/views/ftf/claim/v2-2/upload3.html
+++ b/app/views/ftf/claim/v2-2/upload3.html
@@ -95,13 +95,17 @@
     <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
       <div class="govuk-accordion__section"> 
         
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-             <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
-              Financial evidence (4 files)
-            </span>
-          </h2>
+    
 
+          <div id="financial-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Financial evidence (4 files)
+              </span>
+            </h2>
+                 
+
+          
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
             For example, invoices, receipts and bank statements (you can cross out other transactions)
           </div>
@@ -145,8 +149,7 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
             
@@ -179,22 +182,11 @@
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
           
-<button id="navigateButton1" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Choose file
-</button>
-<input type="file" id="fileInput1" style="display: none;" onchange="handleFileSelection(this, 'upload4.html')">
-
-<script>
-function handleFileSelection(input, destination) {
-  if (input.files.length > 0) {
-    const selectedFile = input.files[0];
-    window.location.href = destination;
-  }
-}
-document.getElementById('navigateButton1').addEventListener('click', function () {
-  document.getElementById('fileInput1').click();
-});
-</script>
+              <a href="upload4.html#visual-evidence-section">
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                  Choose file
+                </button>
+              </a>
 
 
             </div>
@@ -233,8 +225,6 @@ document.getElementById('navigateButton1').addEventListener('click', function ()
             
             </div>
           </div>
-
-
 
 
 
@@ -283,17 +273,6 @@ document.getElementById('navigateButton1').addEventListener('click', function ()
     <button class="govuk-button" data-module="govuk-button">
       Continue
     </button>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
