--- a/app/views/ftf/claim/v2-2/upload4.html
+++ b/app/views/ftf/claim/v2-2/upload4.html
@@ -85,18 +85,22 @@
     <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
       <div class="govuk-accordion__section"> 
         
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-             <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
-              Financial evidence (4 files)
-            </span>
-          </h2>
+      
+          <div id="financial-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Financial evidence (4 files)
+              </span>
+            </h2>
 
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
             For example, invoices, receipts and bank statements (you can cross out other transactions)
           </div>
           
         </div>
+      
+
+
         <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
          
 
@@ -147,13 +151,25 @@
       </div>
       <div class="govuk-accordion__section">
         <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-2">
-              Visual evidence (4 files)
-            </span>
-          </h2>
+         
+         
+         
+         
+          <div id="visual-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Visual evidence (4 files)
+              </span>
+            </h2>
+         
+
+
+
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
             For example, photos and videos
+          </div>
+        
+        
           </div>
         </div>
         <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
@@ -207,18 +223,24 @@
       </div>
       <div class="govuk-accordion__section">
         <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
-              Written evidence
-            </span>
-          </h2>
+         
+         
+          <div id="written-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Written evidence
+              </span>
+            </h2>
+
+
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
             For example, emails and letters
           </div>
         </div>
+      </div>
+
         <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
-          
-          
+                    
 
           <div style="width: 630px; height: 202px; position: relative">
             <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
@@ -246,15 +268,26 @@
      
       <div class="govuk-accordion__section">
         <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
-              Outcomes evidence
-            </span>
-          </h2>
+          
+          
+          
+          <div id="outcomes-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Outcomes evidence
+              </span>
+            </h2>
+          
+          
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
             Only for projects with grant-specific conditions and outputs
+         
           </div>
         </div>
+      </div>
+        
+        
+        
         <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-4">
           
             <div style="width: 630px; height: 202px; position: relative">
@@ -282,14 +315,12 @@
     <br><br>
   
 
-
-
     <a href="check.html">
       <button class="govuk-button" data-module="govuk-button">
         Continue
       </button>
     </a>
-
+  
 
 </main>
 
