--- a/app/views/ftf/claim/v2-3/activity1.html
+++ b/app/views/ftf/claim/v2-3/activity1.html
@@ -147,7 +147,7 @@
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Read and sign agreement
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
@@ -166,6 +166,7 @@
             <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
+            {% if (data['04-01'] == "ready") %}
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="eligibility-status">
@@ -174,6 +175,16 @@
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
+            {% elif (data['04-01'] == "complete") %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="download.html" aria-describedby="eligibility-status">
+                  Download claim form
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
+            </li>
+            {% endif %}
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                   Upload claim form and evidence
