--- a/app/views/ftf/claim/v2-3/activity4.html
+++ b/app/views/ftf/claim/v2-3/activity4.html
@@ -8,6 +8,10 @@
 
 
 
+
+
+
+
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
@@ -18,6 +22,8 @@
     </span>
   </p>
 </div>
+
+
 
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper" style="padding-top: 0px; padding-bottom: 0px;">
@@ -35,6 +41,10 @@
       <hr style="margin: 5px 0;">
 
 <br><br>
+
+
+
+
 
 
   <div class="govuk-grid-row">
@@ -136,7 +146,7 @@
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Read and sign agreement
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
