--- a/app/views/ftf/claim/v2-3/submit.html
+++ b/app/views/ftf/claim/v2-3/submit.html
@@ -43,10 +43,15 @@
         <li>I am submitting invoices, records, accounts and other required evidence (for example photographs) relevant to this claim, and will keep copies of that evidence in accordance with my Grant Funding Agreement.</li>
       </ul>
       <br>
-      <h2 class="govuk-body-s"><strong>Warning:</strong> If you knowingly or recklessly make a false statement to obtain payments to yourself or others, you risk prosecution, termination of any resulting agreement, and recovery of any monies paid to you under the scheme. You may be excluded from this scheme and from other financial assistance under the Agriculture Act 2020 for up to two years. </h2>
-    </p>
 
-    <br>
+
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          If you knowingly or recklessly make a false statement to obtain payments to yourself or others, you risk prosecution, termination of any resulting agreement, and recovery of any monies paid to you under the scheme. You may be excluded from this scheme and from other financial assistance under the Agriculture Act 2020 for up to two years.
+        </strong>
+      </div>
 
 
     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
