--- a/app/views/ftf/claim/v2-3/upload1.html
+++ b/app/views/ftf/claim/v2-3/upload1.html
@@ -45,14 +45,25 @@
       <label class="govuk-label" for="file-upload-1">
         <strong>Upload a file</strong>
       </label>
-      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
+    <!--  <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">  -->
+
+
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file" onclick="redirectToPage()">
+     
+     <script>
+        function redirectToPage() {
+          // Get the URL of the page you want to navigate to
+          const nextPageURL = 'upload1b.html';
+      
+          // Redirect to the next page
+          window.location.href = nextPageURL;
+        }
+      </script>
     </div>
 
-    <a href="upload2.html">
-      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-        Upload file
-      </button>
-    </a>
+    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Upload file
+    </button>
 
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
@@ -71,44 +82,160 @@
     </div>
 
 
-<div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
+    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+              Proof items have been purchased
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+            For example, invoices
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
+          
+          
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                Choose file
+              </button>
+              
+            </div>
+          </div>
 
 
-    <br><br><br><br>
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-2">
+              Proof items have been paid for
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
+            For example, receipts and bank statements (you can cross out other transactions)
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
+          
+          
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
+              Proof items are in place and operational
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
+            For example, photos and videos
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
+          
+          
+
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
+              Proof conditions and outputs have been met
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
+            Only for projects with grant-specific conditions and outputs
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-4">
+          
+          
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+
+
+    <br><br>
+ 
     <a href="activity2.html">
       <button class="govuk-button" data-module="govuk-button">
         Continue
       </button>
     </a>
+
+
+
+
+
+
+
+
 
 
 
