--- a/app/views/ftf/claim/v2-3/upload1b.html
+++ b/app/views/ftf/claim/v2-3/upload1b.html
@@ -41,14 +41,38 @@
       </strong>
     </div>
 
+
+
+    <!--
     <div class="govuk-form-group">
       <label class="govuk-label" for="file-upload-1">
         <strong>Upload a file</strong>
       </label>
-      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">  -->
+
+
+
+
+
+
+
+
+    <div style="width: 397px; height: 68px; position: relative">
+      <div style="width: 107px; height: 31px; left: 0px; top: 37px; position: absolute">
+        <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
+        <div style="width: 105px; height: 24px; left: 1px; top: 5px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
+      </div>
+      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim1_Water_Ma..rant_FTF.docx</div>
+      <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     </div>
 
-    <a href="upload2">
+
+<br><br>
+
+
+    
+
+    <a href="upload2.html">
       <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
         Upload file
       </button>
@@ -93,8 +117,7 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-             <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
               
@@ -125,8 +148,7 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
             
@@ -160,8 +182,7 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
             
@@ -195,8 +216,7 @@
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
-              <input type="file" id="fileInput" style="display: none;">
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="document.getElementById('fileInput').click()">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Choose file
               </button>
             
