--- a/app/views/ftf/claim/v2-3/upload3.html
+++ b/app/views/ftf/claim/v2-3/upload3.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Upload 1" %}
+{% set pageName="Upload 3" %}
 
 {% block content %}
 
@@ -42,8 +42,11 @@
     </div>
 
 
+
+
+
     <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">File added</div>
+      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
       <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
         <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
         <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
@@ -52,6 +55,27 @@
     </div>
 
 
+
+
+
+
+<!--
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="file-upload-1">
+        Upload a file
+      </label>
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
+    </div>
+
+    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Upload file
+    </button>
+
+
+    <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
+
+    -->
+    
 <br><br>
 
     <h2 class="govuk-heading-l">2. Evidence</h2>
@@ -68,42 +92,221 @@
     </div>
 
 
-<div style="display: flex; justify-content: space-between;">
-  <a href="purchased2" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased (4 files)</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="paid1" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
 
 
-    <br><br><br><br>
+
+
+
+
+    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
+      <div class="govuk-accordion__section"> 
+        
+            <div id="purchased-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Proof items have been purchased (4 files)
+              </span>
+            </h2>
+
+
+
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+            For example, invoices
+          </div>
+          
+        </div>
+      
+
+        <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
+         
+
+          <div style="width: 630px; height: 321px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files uploaded</div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 201px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 131px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 271px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+          </div>
+
+
+
+<br><br>
+
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          
+          
+          
+
+
+          <div id="paid-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Proof items have been paid for
+              </span>
+            </h2>
+
+
+        
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
+            For example, receipts and bank statements (you can cross out other transactions)
+          </div>
+       
+       
+        </div>
+      </div>
+       
+       
+        <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
+          
+          
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+          
+              <a href="upload4.html#paid-evidence-section">
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                  Choose file
+                </button>
+              </a>
+
+
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
+              Proof items are in place and operational
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
+            For example, photos and videos
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
+          
+          
+
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+              Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
+              Proof conditions and outputs have been met
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
+            Only for projects with grant-specific conditions and outputs
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-4">
+          
+          
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+              Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+
+
+    <br><br>
     <button class="govuk-button" data-module="govuk-button">
       Continue
     </button>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
