--- a/app/views/ftf/claim/v2-3/upload4.html
+++ b/app/views/ftf/claim/v2-3/upload4.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Upload 1" %}
+{% set pageName="Upload 4" %}
 
 {% block content %}
 
@@ -35,7 +35,6 @@
 </div>
 
 
-
     <br><br>
 
     <div class="govuk-warning-text">
@@ -47,8 +46,11 @@
     </div>
 
 
+
+
+
     <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">File added</div>
+      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
       <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
         <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
         <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
@@ -57,14 +59,17 @@
     </div>
 
 
-<br><br>
 
+
+<br><br>
 
 <div id="evidence">
     <h2 class="govuk-heading-l">2. Evidence</h2>
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
 </div>
-    
+   
+
+
 <br>
 
     <div class="govuk-warning-text">
@@ -76,63 +81,229 @@
     </div>
 
 
-<div style="display: flex; justify-content: space-between;">
-  <a href="purchased2" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased (4 files)</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="paid1" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for (4 files)</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
+    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
+      <div class="govuk-accordion__section"> 
+        
+        <div id="purchased-evidence-section" class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+              Proof items have been purchased (4 files)
+            </span>
+          </h2>
 
 
 
-
-
-<div id="section1">
-  <!-- Content of Section 1 -->
-
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
+        <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+          For example, invoices
+        </div>
+        
+      </div>
 
 
 
-</div>
+        
+        <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
+         
 
 
-    <br><br><br><br>
-   
-   
-   
-   
-   
-    <a href="check">
-      <button class="govuk-button">
+          <div style="width: 630px; height: 321px; position: relative">
+            <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 201px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 131px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 271px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - invoice.pdf , 3MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+          </div>
+
+          <br><br>
+
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+              Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          
+          
+          
+
+          
+          
+          <div id="paid-evidence-section" class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Proof items have been paid for (4 files)
+              </span>
+            </h2>
+
+          
+          
+          
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
+            For example, receipts and bank statements (you can cross out other transactions)
+          </div>
+       
+       
+        </div>
+      </div>
+        
+        
+        <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
+          
+          
+          <div style="width: 630px; height: 321px; position: relative">
+            <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - receipt.pdf , 2MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 201px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - receipt.pdf , 2MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 131px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - bank statement.pdf , 2MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+            <div style="width: 630px; height: 50px; left: 0px; top: 271px; position: absolute">
+              <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - bank statement.pdf , 2MB</div>
+              <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+              <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+            </div>
+          </div>
+
+          <br><br>
+
+
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+              Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
+              Proof items are in place and operational
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
+            For example, photos and videos
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
+          
+          
+
+          <div style="width: 630px; height: 202px; position: relative">
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+              Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+      <div class="govuk-accordion__section">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
+              Proof conditions and outputs have been met
+            </span>
+          </h2>
+          <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
+            Only for projects with grant-specific conditions and outputs
+          </div>
+        </div>
+        <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-4">
+          
+            <div style="width: 630px; height: 202px; position: relative">
+              <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+              <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+            <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+              
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+              Choose file
+              </button>
+            
+            </div>
+          </div>
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+
+
+    <br><br>
+  
+
+
+
+    <a href="check.html">
+      <button class="govuk-button" data-module="govuk-button">
         Continue
       </button>
     </a>
-
-
-
 
 
 </main>
