--- a/app/views/ftf/claim/v2-4/upload1.html
+++ b/app/views/ftf/claim/v2-4/upload1.html
@@ -65,11 +65,9 @@
 
     </div>
 
-    <a href="upload2.html">
-      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-        Upload file
-      </button>
-    </a>
+    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Upload file
+    </button>
 
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
@@ -115,7 +113,7 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Outcomes evidence</strong></a>
+  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Outcomes evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
