--- a/app/views/ftf/claim/v2-4/upload4.html
+++ b/app/views/ftf/claim/v2-4/upload4.html
@@ -54,7 +54,7 @@
 
 <br><br>
 
-    <h2 class="govuk-heading-l">2. Evidence</h2>
+<h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
 
     <br>
@@ -101,7 +101,7 @@
 
 
     <br><br><br><br>
-    <a href="activity3.html">
+    <a href="check">
       <button class="govuk-button">
         Continue
       </button>
