--- a/app/views/ftf/claim/index.html
+++ b/app/views/ftf/claim/index.html
@@ -22,6 +22,8 @@
     
     
     <h3 class="govuk-heading-m">1. Claim journey</h3>
+    <p class="govuk-body">Test the entire journey</p>
+
 
     <p class="govuk-body"><a href="/ftf/claim/v2-0/index" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
 
@@ -29,18 +31,19 @@
 
 
 
-    <h3 class="govuk-heading-m">2. Evidence categories</h3>
+    <h3 class="govuk-heading-m">2. Evidence headers</h3>
+    <p class="govuk-body">Select the preferred headers</p>
 
     <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
     <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p>
-    <p class="govuk-body"><a href="/ftf/claim/v2-6/upload2" target="_blank">V2.6: Full page: Proof + (opens in a new tab)</a></p>
-
+    
 
     <hr style="margin: 40px 0;">
 
 
+    <h3 class="govuk-heading-m">4. Upload task</h3>
+    <p class="govuk-body">Select the preferred upload method</p>
 
-    <h3 class="govuk-heading-m">3. Upload task</h3>
 
     <p class="govuk-body-m"><strong>Type of evidence</strong></p>
 
@@ -62,7 +65,9 @@
 
     <hr style="margin: 40px 0;">
 
-    <h3 class="govuk-heading-m">4. Review claim form</h3>
+    <h3 class="govuk-heading-m">5. Claim form</h3>
+    <p class="govuk-body">Review the claim form</p>
+
 
     <p class="govuk-body"><a href="/public/downloads/ftf/FTF-Claim-Form.pdf" target="_blank">FTF Claim form (opens in a new tab)</a></p> 
 
