--- a/app/views/ftf/claim/v2-0/activity1b.html
+++ b/app/views/ftf/claim/v2-0/activity1b.html
@@ -175,7 +175,7 @@
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="upload1.html" aria-describedby="eligibility-status">
+                <a href="#" aria-describedby="eligibility-status">
                   Upload claim form and evidence
                 </a>
               </span>
@@ -249,7 +249,7 @@
 
 
   <a href="email" aria-describedby="eligibility-status">
-    Move forward 
+    Move forward
   </a>
 
 
