--- a/app/views/ftf/claim/v2-5/upload1.html
+++ b/app/views/ftf/claim/v2-5/upload1.html
@@ -62,17 +62,19 @@
 
     <br>
 
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        You must add evidence for each item you are claiming for.
-      </strong>
-    </div>
+    <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>has been purchased (for example, invoices)</li>
+        <li>has been paid for in full (for example, receipts and bank statements)</li>
+        <li>is in place and operational (for example, photos, videos)</li>
+      </ul>
+    </p>
+
+    <br><br>
 
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -80,7 +82,7 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -88,7 +90,7 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -96,7 +98,7 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
