--- a/app/views/ftf/claim/v2-3/upload1.html
+++ b/app/views/ftf/claim/v2-3/upload1.html
@@ -73,15 +73,15 @@
 
     <br>
 
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        You must add evidence for each item you are claiming for.
-      </strong>
-    </div>
+    <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>has been purchased (for example, invoices)</li>
+        <li>has been paid for in full (for example, receipts and bank statements)</li>
+        <li>is in place and operational (for example, photos, videos)</li>
+      </ul>
+    </p>
 
-
+<br><br>
 
     <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
       <div class="govuk-accordion__section">
