--- a/app/views/ftf/claim/v2-6/upload3.html
+++ b/app/views/ftf/claim/v2-6/upload3.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-
+<head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 
@@ -218,7 +218,7 @@
 </button>
 
 
-
+</head>
 </main>
 
 {% endblock %}
