--- a/app/views/ftf/claim/v2-2/upload1b.html
+++ b/app/views/ftf/claim/v2-2/upload1b.html
@@ -29,7 +29,7 @@
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
     <h2 class="govuk-heading-l">1. Claim form</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
+    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
 
     <br><br>
 
@@ -62,8 +62,8 @@
         <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
         <div style="width: 105px; height: 24px; left: 1px; top: 5px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
       </div>
-      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim1_Water_Ma..rant_FTF.docx</div>
-      <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim1_Water_Ma..rant_FTF.docx</div>
+      <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     </div>
 
 
@@ -82,7 +82,7 @@
 <br><br>
 
     <h2 class="govuk-heading-l">2. Evidence</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
+    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
 
     <br>
 
