--- a/app/views/ftf/claim/v2-4/confirmation.html
+++ b/app/views/ftf/claim/v2-4/confirmation.html
@@ -37,7 +37,7 @@
           <a href="javascript:void(0);" onclick="window.print();" style="text-decoration: none;">
             <div style="width: 141px; height: 40px; position: relative;">
               <div style="width: 141px; height: 40px; left: 0px; top: 0px; position: absolute; background: white; border: 1px #BCBDBF solid;"></div>
-              <div style="width: 141px; right: 0; top: 8px; position: absolute; text-align: center; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 25px; word-wrap: break-word;">Print this page</div>
+              <div style="width: 141px; right: 0; top: 8px; position: absolute; text-align: center; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 25px; word-wrap: break-word;">Print this page</div>
             </div>
           </a>
           
