--- a/app/views/ftf/claim/v2-6/upload3.html
+++ b/app/views/ftf/claim/v2-6/upload3.html
@@ -30,9 +30,8 @@
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
     <h2 class="govuk-heading-l">1. Claim form</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are DOC and DOCX. Maximum file size is 20MB.</p>
 
-    <br><br>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -47,10 +46,10 @@
 
 
     <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
+      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
       <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
-        <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
+        <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
         <div style="width: 612px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
       </div>
     </div>
@@ -80,9 +79,8 @@
 <br><br>
 
     <h2 class="govuk-heading-l">2. Evidence</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
-    <br>
 
     <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
       <ul class="govuk-list govuk-list--bullet">
@@ -108,22 +106,22 @@
   <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica, sans-serif; font-weight: 700; line-height: 30px; word-wrap: break-word">Files uploaded</div>
   <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
     <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica, sans-serif; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
-    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
     <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
   </div>
   <div style="width: 630px; height: 50px; left: 0px; top: 201px; position: absolute">
-    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - invoice.pdf , 3MB</div>
-    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - invoice.pdf , 3MB</div>
+    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
     <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
   </div>
   <div style="width: 630px; height: 50px; left: 0px; top: 131px; position: absolute">
-    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - invoice.pdf , 3MB</div>
-    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - invoice.pdf , 3MB</div>
+    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
     <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
   </div>
   <div style="width: 630px; height: 50px; left: 0px; top: 271px; position: absolute">
-    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - invoice.pdf , 3MB</div>
-    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - invoice.pdf , 3MB</div>
+    <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
     <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
   </div>
 </div>
@@ -134,8 +132,8 @@
 
 
 <div style="width: 630px; height: 202px; position: relative">
-  <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-  <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+  <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+  <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
   <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
   <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
     
@@ -153,8 +151,8 @@
   <p class="govuk-body">For example, receipts and bank statements (you can cross out other transactions)</p>
   
   <div style="width: 630px; height: 202px; position: relative">
-    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
     <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
@@ -174,8 +172,8 @@
   <p class="govuk-body">For example, photos and videos</p>
   
   <div style="width: 630px; height: 202px; position: relative">
-    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
     <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
@@ -193,8 +191,8 @@
   <p class="govuk-body">Only for projects with grant-specific conditions and outputs</p>
   
   <div style="width: 630px; height: 202px; position: relative">
-    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+    <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+    <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
     <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
