--- a/app/views/ftf/claim/v2-5/purchased1.html
+++ b/app/views/ftf/claim/v2-5/purchased1.html
@@ -31,8 +31,6 @@
   
     <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
-  <br>
-
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
@@ -48,21 +46,11 @@
   <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
   <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
 
-    <button id="navigateButton" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-      Choose file
-    </button>
-    <input type="file" id="fileInput" style="display: none;" onchange="handleFileSelection(this)">
-    <script>
-    function handleFileSelection(input) {
-      if (input.files.length > 0) {
-        const selectedFile = input.files[0];
-        window.location.href = 'purchased2.html';
-      }
-    }
-    document.getElementById('navigateButton').addEventListener('click', function () {
-      document.getElementById('fileInput').click();
-    });
-    </script>
+    <a href="purchased2.html">
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Choose file
+      </button>
+    </a>
 
 </main>
 
