Update proto links and options

--- a/app/views/ftf/claim/index.html
+++ b/app/views/ftf/claim/index.html
@@ -22,7 +22,7 @@
     
     
     <h3 class="govuk-heading-m">1. Claim journey</h3>
-    <p class="govuk-body">Test the entire journey</p>
+    <p class="govuk-body">Test the entire journey + confirmation page</p>
 
 
     <p class="govuk-body"><a href="/ftf/claim/v2-0/index" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
@@ -34,8 +34,8 @@
     <h3 class="govuk-heading-m">2. Evidence headers</h3>
     <p class="govuk-body">Select the preferred headers</p>
 
-    <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
-    <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2#evidence" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2#evidence" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p>
     
 
     <hr style="margin: 40px 0;">
@@ -47,9 +47,9 @@
 
     <p class="govuk-body-m"><strong>Type of evidence</strong></p>
 
-    <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2" target="_blank">V2.0: Full page (opens in a new tab)</a></p> 
-    <p class="govuk-body"><a href="/ftf/claim/v2-2/upload2" target="_blank">V2.2: Accordion (opens in a new tab)</a></p> 
-    <p class="govuk-body"><a href="/ftf/claim/v2-4/upload2" target="_blank">V2.4: Links (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2#evidence" target="_blank">V2.0: Full page (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-2/upload2#evidence" target="_blank">V2.2: Accordion (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-4/upload2#evidence" target="_blank">V2.4: Links (opens in a new tab)</a></p> 
 
 <!--<p    <p class="govuk-body"><strong> v2.2: Links (type)</strong></p> -->
 <!--<p class="govuk-body"><a href="/ftf/claim/v2-2/upload2" target="_blank">Click to open prototype (opens in a new tab)</a></p> -->
@@ -58,9 +58,9 @@
 
     <p class="govuk-body-m"><strong>Proof of evidence</strong></p>
 
-    <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p> 
-    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2" target="_blank">V2.3: Accordion: Proof (opens in a new tab)</a></p> 
-    <p class="govuk-body"><a href="/ftf/claim/v2-5/upload2" target="_blank">V2.5: Links: Proof (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2#evidence" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2#evidence" target="_blank">V2.3: Accordion: Proof (opens in a new tab)</a></p> 
+    <p class="govuk-body"><a href="/ftf/claim/v2-5/upload2#evidence" target="_blank">V2.5: Links: Proof (opens in a new tab)</a></p> 
 
 
     <hr style="margin: 40px 0;">
