--- a/app/views/ftf/claim/v2-0/check.html
+++ b/app/views/ftf/claim/v2-0/check.html
@@ -54,7 +54,7 @@
 
 
 
-        <h2 class="govuk-heading-l">2. Evidence</h2>
+    <h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
