--- a/app/views/ftf/claim/v2-3/submit.html
+++ b/app/views/ftf/claim/v2-3/submit.html
@@ -65,17 +65,17 @@
 
 <br><br><br>
 
-    <a href="confirmation.html">
-      <button class="govuk-button" data-module="govuk-button">
-        Submit claim
-      </button>
-    </a>
+<a href="confirmation.html">
+  <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
+    Submit claim
+  </button>
+</a>
+<br>
+<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Cancel
+</button>
 
-    <span style="margin-right: 20px;"></span>
 
-    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-      Cancel
-    </button>
 
 </main>
 
