--- a/app/views/ftf/claim/v2-3/upload1.html
+++ b/app/views/ftf/claim/v2-3/upload1.html
@@ -67,7 +67,7 @@
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
 
-    <h2 class="govuk-heading-l">2. Evidence</h2>
+<h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
     <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
     <br>
