--- a/app/views/ftf/claim/v2-5/check.html
+++ b/app/views/ftf/claim/v2-5/check.html
@@ -56,7 +56,7 @@
 
 
 
-        <h2 class="govuk-heading-l">2. Evidence</h2>
+    <h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
 
 
         <dl class="govuk-summary-list">
