--- a/app/views/ftf/claim/v2-5/upload4.html
+++ b/app/views/ftf/claim/v2-5/upload4.html
@@ -61,7 +61,7 @@
 
 
 <div id="evidence">
-    <h2 class="govuk-heading-l">2. Evidence</h2>
+<h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
     <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 </div>
     
