--- a/app/views/ftf/claim/v2-0/confirmation.html
+++ b/app/views/ftf/claim/v2-0/confirmation.html
@@ -20,18 +20,24 @@
   <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+        
+        
+        
+        
         <div class="govuk-panel govuk-panel--confirmation">
-          <h1 class="govuk-panel__title">
-            First claim submitted
-
-          </h1>
+          <a href="confirmation2.html" style="text-decoration: none; color: inherit;">
+            <h1 class="govuk-panel__title">
+              First claim submitted
+            </h1>
+          </a>
+          <br><br>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
           </div>
         </div>
         
         
-        
+      
         <div style="display: flex; justify-content: space-between; align-items: center;">
           <p class="govuk-body" style="margin: 0;">We have sent you a confirmation email.</p>
         
