--- a/app/views/ftf/claim/v2-0/upload1.html
+++ b/app/views/ftf/claim/v2-0/upload1.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Upload 2" %}
+{% set pageName="Upload 1" %}
 
 {% block content %}
 
@@ -39,48 +39,39 @@
         Do not upload scanned copies or PDFs of this form.
       </strong>
     </div>
-
-
-
-
-
-    <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
-      <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
-        <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
-        <div style="width: 612px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
-      </div>
-    </div>
-
-
-
-
-
-
-<!--
     <div class="govuk-form-group">
       <label class="govuk-label" for="file-upload-1">
-        Upload a file
+        <strong>Upload a file</strong>
       </label>
-      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
+    <!--  <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">  -->
+
+
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file" onclick="redirectToPage()">
+     
+     <script>
+        function redirectToPage() {
+          // Get the URL of the page you want to navigate to
+          const nextPageURL = 'upload1b.html';
+      
+          // Redirect to the next page
+          window.location.href = nextPageURL;
+        }
+      </script>
     </div>
 
     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
       Upload file
     </button>
 
-
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
-
-    -->
-    
 <br><br>
 
 <h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
     <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
     <br>
+
+
 
     <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
       <ul class="govuk-list govuk-list--bullet">
@@ -90,7 +81,8 @@
       </ul>
     </p>
 
-    <br><br>
+
+<br><br>
 
 
 <h3 class="govuk-heading-m">Financial evidence</h3>
@@ -102,11 +94,11 @@
   <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
   <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
     
-  <a href="upload3.html#financial-evidence-section">
+
       <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
         Choose file
       </button>
-  </a>
+
 
 </div>
 </div>
@@ -123,11 +115,9 @@
     <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
-    <a href="upload3.html#visual-evidence-section">
-        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          Choose file
-        </button>
-    </a>
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Choose file
+      </button>
 
 </div>
 </div>
@@ -144,11 +134,9 @@
     <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
-    <a href="upload3.html#written-evidence-section">
-        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          Choose file
-        </button>
-    </a>
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Choose file
+      </button>
 
 </div>
 </div>
@@ -165,11 +153,9 @@
     <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
-    <a href="upload3.html#outcomes-evidence-section">
-        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          Choose file
-        </button>
-    </a>
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Choose file
+      </button>
 
 </div>
 </div>
@@ -181,6 +167,8 @@
 <button class="govuk-button" data-module="govuk-button">
   Continue
 </button>
+    </a>
+
 
 
 
