--- a/app/views/ftf/claim/v2-2/upload1b.html
+++ b/app/views/ftf/claim/v2-2/upload1b.html
@@ -61,7 +61,7 @@
         <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
         <div style="width: 105px; height: 24px; left: 1px; top: 5px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
       </div>
-      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim1_Water_Ma..rant_FTF.docx</div>
+      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim1_Water_Ma..rant_FTF.docx</div>
       <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     </div>
 
@@ -80,7 +80,7 @@
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
 
-    <h2 class="govuk-heading-l">2. Evidence</h2>
+<h2 class="govuk-heading-l" id="evidence">2. Evidence</h2>
     <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
     <br>
