--- a/app/views/ftf/claim/v2-4/confirmation.html
+++ b/app/views/ftf/claim/v2-4/confirmation.html
@@ -22,7 +22,8 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Claim submitted
+            First claim submitted
+
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
