--- a/app/views/ftf/claim/v2-0/confirmation4.html
+++ b/app/views/ftf/claim/v2-0/confirmation4.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/main-claim-round-2.html" %}
 
 {% set pageName="Confirmation" %}
 
@@ -24,15 +24,15 @@
       
 
         <div class="govuk-panel govuk-panel--confirmation">
-          <a href="confirmation.html" style="text-decoration: none; color: inherit;">
+          <a href="confirmation5.html" style="text-decoration: none; color: inherit;">
             <h1 class="govuk-panel__title" style="margin-bottom: 20px;">
               First claim submitted
             </h1>
           </a>
           <p class="govuk-body-l" style="color: white; margin-bottom: 5px;">by John Smith</p>
           <p class="govuk-body-l" style="color: white; margin-bottom: 5px;">for Imaginary Farms Ltd</p>
-          <p class="govuk-body-l" style="color: white;">Project: WM-VMA-1234</p>
-          
+          <p class="govuk-body-l" style="color: white;">on 24 September 2023</p>
+    
 
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
