--- a/app/views/ftf/claim/v2-0/confirmation5.html
+++ b/app/views/ftf/claim/v2-0/confirmation5.html
@@ -24,13 +24,15 @@
       
 
         <div class="govuk-panel govuk-panel--confirmation">
-          <a href="confirmation4.html" style="text-decoration: none; color: inherit;">
+          <a href="confirmation.html" style="text-decoration: none; color: inherit;">
             <h1 class="govuk-panel__title" style="margin-bottom: 20px;">
               First claim submitted
             </h1>
           </a>
           <p class="govuk-body-l" style="color: white; margin-bottom: 5px;">by John Smith</p>
-          <p class="govuk-body-l" style="color: white;">for Imaginary Farms Ltd</p>
+          <p class="govuk-body-l" style="color: white; margin-bottom: 5px;">for Imaginary Farms Ltd</p>
+          <p class="govuk-body-l" style="color: white; margin-bottom: 5px;">on 24 September 2023</p>
+          <p class="govuk-body-l" style="color: white;">Project: WM-VMA-1234</p>
           
 
           <div class="govuk-panel__body">
