--- a/app/views/ftf/claim/v2-5/purchased2.html
+++ b/app/views/ftf/claim/v2-5/purchased2.html
@@ -89,7 +89,7 @@
 </main>
 
 <br>
-<a href="upload3.html">
+<a href="upload3#evidence.html">
   <button class="govuk-button">
     Continue
   </button>
