--- a/app/views/ftf/claim/v2-2/email.html
+++ b/app/views/ftf/claim/v2-2/email.html
@@ -161,7 +161,7 @@
           <div class="govuk-details__text">
             <p class="govuk-body">If you cannot submit your claim by this date, please contact the RPA.</p>
             <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
-            <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+            <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">GSClaimqueries@rpa.gov.uk</a></p>
           </div> 
 
          <br>
